kubernetes/mysql-service.yaml
apiVersion: v1
kind: Service
metadata: 
  name: mysql
  labels:
    app: mysql
spec: 
  ports:
    # the port that this service should serve on
    - port: 3306
      protocol: TCP
  # label keys and values that must match in order to receive traffic for this service
  selector: 
    app: mysql
