kubernetes/ui-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: ui
  labels:
    app: ui
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      name: http
  selector:
    app: ui
